# opensessions

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRACTS.md  Cargo.toml  PRODUCT.md  README.md  opensessions.tmux  package.json
.github/workflows/: auto-version.yml  release.yml  rust-tmux-e2e.yml
apps/server-rs/: Cargo.toml
apps/server-rs/src/: lib.rs  main.rs
apps/server-rs/tests/: protocol_shell.rs  shim_socket.rs  sidebar_settle.rs
apps/sidebar-shim-rs/: Cargo.toml
apps/sidebar-shim-rs/src/: main.rs
apps/tui-rs/: AGENT.md  Cargo.toml
apps/tui-rs/src/: app.rs  cli.rs  client.rs  lib.rs  main.rs  renderer.rs  runtime_config.rs  runtime_context.rs  snapshot.rs
apps/tui-rs/tests/: app_state.rs  cli.rs  click_flash.rs  connection.rs  footer.rs  frame_patches.rs  header.rs  mouse.rs  protocol.rs  render_snapshots.rs  runtime_context.rs  shared_input.rs  shim_protocol.rs  theme.rs  tmux_e2e.rs
apps/tui/scripts/: sessionizer.sh  start.sh
docs/: rust-server-runtime-migration.md  sidebar-alignment-sketch.md
docs/explanation/: architecture.md  sidebar-behavior-test-matrix.md  sidebar-behavior.md  sidebar-state-chaos-grill.md
docs/ratatui-migration/: 00-index.md  01-overview.md  02-lightweight-stack.md  03-architecture-comparison.md  04-protocol-and-types.md  05-state-management.md  06-rendering-and-layout.md  07-components.md  08-input-keyboard.md  09-input-mouse.md  10-mux-and-system.md  11-config-and-persistence.md  12-themes.md  13-server-bootstrap.md  14-edge-cases.md  15-testing.md  16-distribution.md  17-feasibility-matrix.md  README.md  sidebar-ui-column-logic.md
docs/ratatui-migration/reference-snapshots/: observed-sgr-codes.txt  pane-attached-session-list.ansi  pane-attached-session-list.txt  pane-multi-window.ansi  pane-multi-window.txt  pane-opensessions-self.ansi  pane-opensessions-self.txt
docs/reference/: configuration.md  features-and-keybindings.md
docs/tutorials/: get-started-in-tmux.md
integrations/amp/: opensessions.ts
integrations/pi-extension/: README.md  opensessions-runtime.ts
integrations/tmux-plugin/scripts/: ensure-sidebar.sh  focus.sh  install-binaries.sh  server-common.sh  switch-index.sh  toggle.sh  uninstall.sh  zellij-toggle.sh
scripts/: postinstall.js  postinstall.test.ts
